# tinutil

./: .gitignore  CMakeLists.txt
tests/: CMakeLists.txt  collection.cpp  util.cpp
tinutil/: CMakeLists.txt  collection.h  util.h
